--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
@@ -20,5 +20,5 @@
   --search-area-mobile-left: initial;
   --search-area-mobile-top: 0;
   --menu-background: var(--background-color,#1d1b1b);
-  --menu-opacity: 0.7
+  --menu-opacity: 0.7;
 } 
