--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
@@ -21,4 +21,12 @@
   --search-area-mobile-top: 0;
   --menu-background: var(--background-color,#1d1b1b);
   --menu-opacity: 0.7;
+  --tooltipster-content: #f2f2f2;
+  --chart-grid: #222222;
 } 
+
+/* Use a background color on black theme to solve "invisible" icons */
+img.ca_displayIcon, img.popupIcon {
+  background-color: var(--gray-600,#404040);
+  border-radius: 1rem 1rem 1rem 1rem;
+}
