--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
@@ -21,4 +21,6 @@
     --search-area-mobile-top: 0;
     --menu-background: var(--background-color,#1d1b1b);
     --menu-opacity: 0.8;
+    --tooltipster-content: #f2f2f2;
+    --chart-grid: #222222;
 } 
